sol/2021_ps_f2_senha.txt
Senha da Vó Zinha
Resumo da correção
Pontuação 0 / 100
Linguagem C++17 / g++
Limite de tempo permitido 0,1 s
Limite de memória permitido 64.0 MB
Máximo tempo usado 0 s
Máxima memória usada N/D
Detalhes da correção
Execução dos testes
Compilação
Resultado da compilação Compilação terminou com falha
Saída Padrão (stdout):
Saída de erro padrão (stderr):
2021f2p2_senha.cpp: In function ‘int main()’:
2021f2p2_senha.cpp:25:42: error: invalid initialization of reference of type ‘const std::string&’ {aka ‘const std::__cxx11::basic_string<char>&’} from expression of type ‘char’
   25 |         for (const string& word : words[i]) {
      |                                          ^
